ecmascript/parser/tests/test262-error-references/fail/525c5220320e32ee.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/525c5220320e32ee.js:1:7
  |
1 | try { }
  |       ^

